# CPPM7_11

./: .gitignore  README.md
CPPM7_11_1/: CPPM7_11_1.cpp  CPPM7_11_1.vcxproj  CPPM7_11_1.vcxproj.filters
CPPM7_11_2/: CPPM7_11_2.vcxproj  CPPM7_11_2.vcxproj.filters
CPPM7_11_3/: CMakeLists.txt  CPPM7_11_3.cpp  Leaver.h
CPPM7_11_4/: CPPM7_11_4.cpp  CPPM7_11_4.vcxproj  CPPM7_11_4.vcxproj.filters
CPPM7_11_5/: CMakeLists.txt  CPPM7_11_5.cpp  Figure.cpp  Figure.h  Quadrilateral.cpp  Quadrilateral.h  Triangle.cpp  Triangle.h
FigureLibDynamic/: Figure.h  FigureLibDynamic.sln  FigureLibDynamic.vcxproj  Quadrilateral.h
FigureLibraryDynamic/: Figure.cpp  Figure.h  FigureLibraryDynamic.sln  FigureLibraryDynamic.vcxproj  Quadrilateral.h  Triangle.cpp  Triangle.h
GreeterStaticLib/: GreeterStaticLib.cpp  GreeterStaticLib.sln  GreeterStaticLib.vcxproj  GreeterStaticLib.vcxproj.filters
LeaverDynamicLib/: Leaver.cpp  Leaver.h  LeaverDynamicLib.vcxproj  LeaverLibraryDynamic.sln
LeaverLibraryDynamic/: Leaver.h  LeaverLibraryDynamic.sln  LeaverLibraryDynamic.vcxproj
