cmake_minimum_required(VERSION 3.10)
project(CPPM7_11_5)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(FigureLibraryDynamic SHARED Figure.h Figure.cpp Triangle.h Triangle.cpp Quadrilateral.cpp Quadrilateral.h)
add_executable(CPPM7_11_5 CPPM7_11_5.cpp)
target_link_libraries(CPPM7_11_5 FigureLibraryDynamic)